--- a/app/src/main/res/layout/add_contact_fragment.xml
+++ b/app/src/main/res/layout/add_contact_fragment.xml
@@ -46,7 +46,7 @@
                             android:id="@+id/empty_state_friendship_request"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            custom:description="@string/text_empty_state_friendship_description"
+                            custom:titleEmptyState="@string/text_empty_state_friendship_description"
                             custom:image="?attr/attrImageEmptyStateFriendshipRequest" />
 
                         <androidx.recyclerview.widget.RecyclerView
@@ -72,9 +72,8 @@
                         android:id="@+id/empty_state_search"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        custom:description="@string/text_empty_state_search_description"
                         custom:image="?attr/attrImageEmptyStateSearchContact"
-                        custom:titleEmptyState="@string/text_empty_state_contacts_title" />
+                        custom:titleEmptyState="@string/text_empty_state_search_contacts" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView_contacts"
