--- a/app/src/main/res/values-es/recovery_account.xml
+++ b/app/src/main/res/values-es/recovery_account.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="text_btn_recovery">Recuperar</string>
     <string name="text_count_questions_recovery_account">Pregunta %1$d / %2$d</string>
-    <string name="text_description_recovery">Tus contactos te están esperando, tráelos de vuelta. Recupera de manera rápida y segura tus contactos, preferencias y apodo anterior respondiendo correctamente las preguntas de seguridad</string>
+    <string name="text_description_recovery">Recupera de manera rápida y segura tus contactos respondiendo correctamente las preguntas de seguridad.</string>
     <string name="text_recovery_success">Tu cuenta ha sido recuperada, ahora podrás conversar de manera privada y segura con tus contactos.</string>
     <string name="text_title_success">Recuperación de Cuenta</string>
     <string name="text_placeholder_password">Ingrese su Contraseña</string>
@@ -10,4 +10,6 @@
     <string name="text_description_validate_old_answers">Preguntas de Seguridad. Está más cerca de recuperar su cuenta, ayúdanos a confirmar su identidad. Responde de manera correcta las siguientes preguntas de seguridad</string>
     <string name="text_password_incorrect">La contraseña ingresada es incorrecta</string>
     <string name="text_answers_incorrect">Las respuestas ingresadas son incorrectas.</string>
+    <string name="text_title_block_attempts">Bloqueado</string>
+    <string name="text_description_block_attempts">Ha sido bloqueado por exceder la cantidad de intentos de recuperación de cuenta</string>
 </resources>
