--- a/app/src/main/res/values-fr/contacts.xml
+++ b/app/src/main/res/values-fr/contacts.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="text_my_contacts">Mes contacts</string>
     <string name="text_description_empty_state_contacts">Ajoutez vos amis et partagez avec eux de manière sécurisée et privée.</string>
-    <string name="text_wish_block_contact">Voulez-vous vraiment bloquer %1$s?</string>
-    <string name="text_wish_delete_contact">Voulez-vous vraiment supprimer %1$s?</string>
+    <string name="text_wish_block_contact">Voulez-vous vraiment bloquer ce contact?</string>
+    <string name="text_wish_delete_contact">Voulez-vous vraiment supprimer ce contact?</string>
     <string name="text_blocked_contact">Contact bloqué</string>
     <string name="text_deleted_contact">Contact supprimé</string>
     <string name="search_by_nickname">Recherche par surnom</string>
