--- a/app/src/main/res/values-it/chat_main_menu.xml
+++ b/app/src/main/res/values-it/chat_main_menu.xml
@@ -6,5 +6,5 @@
     <string name="text_preview_background_chat_title">Vista previa fondo de chat</string>
     <string name="text_invite_someone_title">Invita qualcuno</string>
     <string name="text_help_title">Aiuto</string>
-    <string name="text_subscription_title">Suscripción</string>
+    <string name="text_subscription_title">Sottoscrizione</string>
 </resources>
