--- a/app/src/main/res/values-pt/contacts.xml
+++ b/app/src/main/res/values-pt/contacts.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="text_my_contacts">Meus contatos</string>
     <string name="text_description_empty_state_contacts">Adicione seus amigos e compartilhe com eles de forma segura e privada.</string>
-    <string name="text_wish_block_contact">Tem certeza de que deseja bloquear %1$s?</string>
-    <string name="text_wish_delete_contact">Tem certeza de que deseja remover %1$s?</string>
+    <string name="text_wish_block_contact">Tem certeza de que deseja bloquear este contato?</string>
+    <string name="text_wish_delete_contact">Tem certeza de que deseja excluir este contato?</string>
     <string name="text_blocked_contact">Contacto bloqueado</string>
     <string name="text_deleted_contact">Contacto eliminado</string>
     <string name="search_by_nickname">Pesquisa por apelido</string>
