--- a/app/src/main/res/values-pt/subscription.xml
+++ b/app/src/main/res/values-pt/subscription.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_trial_period">Período de provas</string>
+    <string name="text_trial_period">Período experimental - %1$d dias restantes</string>
     <string name="text_current_subscription">Assinatura atual</string>
     <string name="text_get_subscription">Compre uma assinatura</string>
     <string name="text_subscription_type">Tipo de assinatura</string>
