--- a/app/src/main/res/values/contacts.xml
+++ b/app/src/main/res/values/contacts.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="text_my_contacts">My Contacts</string>
     <string name="text_description_empty_state_contacts">Add your friends and share with them in a safe and private way.</string>
-    <string name="text_wish_block_contact">Are you sure you want to block %1$s?</string>
-    <string name="text_wish_delete_contact">Are you sure you want to remove %1$s?</string>
+    <string name="text_wish_block_contact">Are you sure you want to block this contact?</string>
+    <string name="text_wish_delete_contact">Are you sure you want to delete this contact?</string>
     <string name="text_blocked_contact">Contact blocked</string>
     <string name="text_deleted_contact">Contact deleted</string>
     <string name="search_by_nickname">Search by nickname</string>
