--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -850,7 +850,6 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@android:color/transparent</item>
-        <item name="android:maxLength">@dimen/max_length_display_name</item>
         <item name="android:padding">0dp</item>
         <item name="android:singleLine">true</item>
         <item name="android:textColor">?attr/attrColorButtonTint</item>
@@ -929,6 +928,10 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">?attr/attrTextColorSecondaryTextColor</item>
         <item name="android:background">@drawable/bg_white_with_separator</item>
+    </style>
+
+    <style name="SearchStyle">
+        <item name="android:digits">@string/nickname_configuration</item>
     </style>
 
     <style name="MyAppActionBarTheme" parent="android:Theme.Holo.Light">
