--- a/app/src/main/res/layout/validate_password_previous_recovery_account_fragment.xml
+++ b/app/src/main/res/layout/validate_password_previous_recovery_account_fragment.xml
@@ -71,10 +71,9 @@
                             android:id="@+id/textInputEditText_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:digits="@string/only_letters_and_numbers"
-                            android:inputType="text"
+                            android:inputType="textPassword"
                             android:lines="1"
-                            android:maxLength="50"
+                            android:maxLength="40"
                             android:maxLines="1"
                             android:singleLine="true" />
 
