--- a/app/src/main/res/layout/time_access_pin_dialog_fragment.xml
+++ b/app/src/main/res/layout/time_access_pin_dialog_fragment.xml
@@ -43,14 +43,10 @@
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintHeight_max="300dp"
+            android:layout_height="265dp"
+            app:layout_constraintTop_toBottomOf="@id/view_title_separator"
             android:scrollbarThumbVertical="@color/colorSecondaryDark"
-            android:scrollbars="vertical"
-            app:layout_constraintBottom_toTopOf="@id/container_bottom_options"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_title">
+            android:scrollbars="vertical">
 
             <RadioGroup
                 android:id="@+id/radioGroup_options"
