NS-EX1, NS-EX62

--- a/app/src/main/res/layout/add_contact_friendship_request_title.xml
+++ b/app/src/main/res/layout/add_contact_friendship_request_title.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,7 +14,7 @@
         style="@style/TextViewListTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@{title.title}"
+        app:titleFriendshipRequest="@{title}"
         tools:text="Hola mundo">
     </TextView>
 </layout>
