--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -23,7 +23,7 @@
     <color name="colorBackgroundDialog">#121212</color>
     <color name="colorSecondaryBackground">#282828</color>
     <color name="buttonTint">#f2f2f2</color>
-    <color name="buttonTintCamera">#121212</color>
+    <color name="buttonTintCamera">#f2f2f2</color>
     <color name="trackColor">#4Df2f2f2</color>
     <color name="disabledTrackColor">#4D505564</color>
     <color name="disabledThumbColor">@color/colorSecondaryDark</color>
