--- a/app/src/main/res/layout/attachment_preview_fragment.xml
+++ b/app/src/main/res/layout/attachment_preview_fragment.xml
@@ -33,15 +33,16 @@
                 android:id="@+id/scrollView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/black">
+                android:background="@color/black"
+                android:fillViewport="true">
 
                 <ImageView
                     android:id="@+id/imageView_preview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
                     android:background="@color/black"
-                    android:scaleType="centerInside"
                     android:transitionName="@{@string/transition_name_gallery_thumbnail(galleryItemId)}"
                     app:attachmentImage="@{viewModel.attachmentTaken}"
                     tools:src="@drawable/vertical_photo" />
