--- a/app/src/main/res/values-pt/enter_pin.xml
+++ b/app/src/main/res/values-pt/enter_pin.xml
@@ -5,6 +5,6 @@
     <string name="text_pin_unlock_time">Desbloquear tempo</string>
     <string name="text_pin_unlock_note">Você excedeu o número de tentativas permitidas. Por isso, bloqueamos sua conta por um tempo.</string>
     <string name="text_pin_enter">Digite o PIN</string>
-    <string name="text_title_dialog_biometrics">Blocco dell\'applicazione</string>
-    <string name="text_description_dialog_biometrics">Sblocca l\'applicazione accedendo con il biometrico</string>
+    <string name="text_title_dialog_biometrics">Bloqueio de aplicativo</string>
+    <string name="text_description_dialog_biometrics">Desbloqueie o aplicativo entrando com o biométrico</string>
 </resources>
