--- a/app/src/main/res/layout/enter_code_fragment.xml
+++ b/app/src/main/res/layout/enter_code_fragment.xml
@@ -34,41 +34,41 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
+                        android:id="@+id/textView_attempts_for_enter_code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/normal_margin"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="@string/text_number_attempts"
+                        tools:visibility="visible" />
+
+                    <TextView
                         android:id="@+id/textView_note"
                         style="@style/BodyTextView.Bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/normal_margin"
+                        android:layout_marginTop="@dimen/large_margin"
                         android:text="@string/text_check_push"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@id/textView_attempts_for_enter_code" />
 
                     <com.naposystems.pepito.ui.custom.EnterCodeWidget
                         android:id="@+id/enter_code_widget"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/large_margin"
-                        app:errorText=""
+                        android:layout_marginTop="@dimen/normal_margin"
+                        app:errorText="@string/text_message_code_fail"
                         app:isSecureText="false"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/textView_note"
                         app:numBoxes="6" />
 
-                    <TextView
-                        android:id="@+id/textView_attempts_for_enter_code"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/small_margin"
-                        android:visibility="gone"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/enter_code_widget"
-                        tools:text="@string/text_number_attempts"
-                        tools:visibility="visible" />
 
-                    <TextView
+                    <!--<TextView
                         android:id="@+id/textView_error"
                         style="@style/SmallBodyTextView.Error"
                         android:layout_width="wrap_content"
@@ -78,8 +78,8 @@
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/textView_attempts_for_enter_code"
-                        tools:visibility="visible" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        tools:visibility="gone" />-->
 
                     <TextView
                         android:id="@+id/textView_time_for_enter_code"
@@ -89,7 +89,7 @@
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/textView_error"
+                        app:layout_constraintTop_toBottomOf="@id/enter_code_widget"
                         tools:text="Nuevo intento en: 30 segundos"
                         tools:visibility="visible" />
 
@@ -98,21 +98,22 @@
                         style="@style/AppPrimaryButtonText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/small_margin"
                         android:text="@string/text_dont_receive_code"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView_time_for_enter_code" />
 
-                    <TextView
+                    <!--<TextView
                         android:id="@+id/textView_time_for_new_code"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/button_code_forwarding"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         tools:text="Nuevo intento en: 30 segundos"
-                        tools:visibility="visible" />
+                        tools:visibility="gone" />
 
                     <TextView
                         android:id="@+id/textView_attempt_for_new_code"
@@ -120,8 +121,10 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/textView_time_for_new_code"
-                        tools:text="@string/text_number_attempts" />
+                        tools:text="@string/text_number_attempts" />-->
 
                     <ViewSwitcher
                         android:id="@+id/viewSwitcher"
@@ -129,7 +132,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/textView_attempt_for_new_code">
+                        app:layout_constraintTop_toBottomOf="@id/button_code_forwarding">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -140,6 +143,7 @@
                                 style="@style/AppPrimaryButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/small_margin"
                                 android:enabled="false"
                                 android:text="@string/text_continue"
                                 app:layout_constraintEnd_toEndOf="parent"
