--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -728,7 +728,7 @@
     </style>
 
     <style name="AppPrimaryButtonText" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textColor">?attr/attrTextColorButtonTint</item>
+        <item name="android:textColor">@color/state_button</item>
         <item name="android:textSize">@dimen/normal_button_text_size</item>
         <item name="android:textAllCaps">false</item>
     </style>
