--- a/app/src/main/res/layout/custom_view_audio_player.xml
+++ b/app/src/main/res/layout/custom_view_audio_player.xml
@@ -16,73 +16,28 @@
             android:id="@+id/imageButton_play"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:layout_marginStart="@dimen/small_margin"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="true"
             android:scaleType="fitCenter"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:firstAnimation="@drawable/anim_play_to_pause"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:secondAnimation="@drawable/anim_pause_to_play"
-            app:srcCompat="@drawable/ic_play_arrow_black"
-            tools:visibility="visible" />
-
-        <com.naposystems.pepito.ui.custom.circleProgressBar.CircleProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            custom:progress="0"
-            custom:progressBarThickness="@dimen/circle_progress_bar"
-            custom:progressbarColor="?attr/attrTextColorColorTextMyMessage"
-            tools:progress="0"
-            tools:visibility="gone" />
-
-        <ProgressBar
-            android:id="@+id/progressBar_indeterminate"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:indeterminate="true"
-            android:indeterminateTint="?attr/attrTextColorColorTextMyMessage"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="gone" />
-
-        <!-- BUTTON ATTACHMENT STATE -->
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/imageButton_state"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:background="@android:color/transparent"
-            android:foreground="?attr/actionBarItemBackground"
-            android:padding="@dimen/x_small_padding"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_close_black_24"
-            tools:visibility="gone" />
+            app:srcCompat="@drawable/ic_play_arrow_black" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_controls"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_margin"
             android:layout_marginTop="@dimen/small_margin"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guideline"
+            app:layout_constraintStart_toEndOf="@id/imageButton_play"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageButton
@@ -130,17 +85,10 @@
             app:layout_constraintEnd_toStartOf="@id/textView_duration"
             app:layout_constraintStart_toStartOf="@id/container_controls"
             app:layout_constraintTop_toBottomOf="@id/container_controls"
-            tools:progress="50"
+            tools:progress="0"
             tools:progressBackgroundTint="@color/black"
             tools:progressTint="?attr/attrSeekbarProgressTint"
             tools:thumbTint="?attr/attrSeekbarThumbTint" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="52dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
